--- a/src/components/sections/OperateNodeSection.module.css
+++ b/src/components/sections/OperateNodeSection.module.css
@@ -211,3 +211,8 @@
   margin-top: 0;
   box-sizing: border-box;
 }
+
+
+[data-theme="dark"] .codeBlock {
+  background: white;
+}
